--- a/css/style.css
+++ b/css/style.css
@@ -1,78 +1,235 @@
-  html {
-    /*background-image: url(https://img.freepik.com/premium-photo/dark-grey-polyester-wool-fabric-texture-background_469558-2450.jpg);*/
+body {
     background-color: #3e5f8a;
     font-family: Arial, Helvetica, sans-serif;
-  }
-  
-  h1 {
-    margin:auto;
-    background-color: white;
+    display: flex;
+    flex-direction: column;
     text-align: center;
-  }
+    margin: 0 auto;
+    height: 100%;
+}
+h1 {
+    margin: 5vw;
+}
 
-  .center{
-    margin: auto;
+a{
+    margin: 1vw;
+}
+
+nav {
+    display: flex;
+    flex-direction: row;
     text-align: center;
-    border-radius: 10px;
-  }
+    justify-content: center;
 
-  .white{
-    border-radius: 10px;
-    background-color: white;
-
-  }
-  .navitem{
+}
+nav .button{
+    background-color: gray;
+    color: white;
+    text-decoration: none;
+    font-size: 16px;
     padding: 2%;
-    border-radius: 10px;
-    border-color: black;
-    border-radius: 10px;
-  }
+}
 
-  #hobbiecontainer{
-    background-color: rgb(255, 255, 255);
-  }
-  #leerdoelencontainer {
-      background-color: rgb(240, 126, 126);
-      border-radius: 10px;
-    }
-  p{
-    margin-left: 10px;
-  }
-  #laatstejaren {
-    background-color: #8CDE08;
-    border-radius: 10px;
-  }
-  #skills{
-    background-color: #e2a727;
-    border-radius: 10px;
-  }
-    table {
-      font-family: arial, sans-serif;
-      border-collapse: collapse;
-      width: 100%;
-    }
-  
-    td,
-    th {
-      border: 1px solid #ffffff;
-      text-align: left;
-      padding: 10px;
-    }
-  
-    tr:nth-child(odd) {
-      background-color: #ffffff;
+nav a {
+    color: white;
+    text-decoration: none;
+}
+
+button{
+    transition-duration: 0.4s;
+    font: 1em sans-serif;
+}
+button:hover{
+    background-color: gray;
+}
+
+
+/* The hero image*/
+.hero-image {
+    /* Use "linear-gradient" to add a darken background effect to the image (photographer.jpg). This will make the text easier to read */
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/img/banner.png");
+
+    /* Set a specific height */
+    height: 60vw;
+
+    /* Position and center the image to scale nicely on all screens */
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+}
+
+/* Place text in the middle of the image */
+.hero-text {
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+}
+.hero-text button {
+    border: none;
+    outline: 0;
+    display: inline-block;
+    padding: 10px 25px;
+    color: black;
+    background-color: #ddd;
+    text-align: center;
+    cursor: pointer;
+    text-decoration: none;
+}
+.hero-text a{
+    text-decoration: dashed;
+}
+
+.hero-text button:hover {
+    background-color: #555;
+    color: white;
+}
+
+#wie {
+    color: white;
+    margin: auto;
+}
+#wie ul {
+    display: flex;
+    flex-direction: column;
+}
+.cardcontainer {
+    margin: auto;
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    
+}
+.cardcontainer img{
+    width: 90vw;
+    margin: auto;
+}
+.hobbycards{
+    width: 100vw;
+    
+}
+.hobbycards p {
+    width: 90%;
+    margin: auto;
+    margin-bottom: 20px;
+}
+
+.hobbycards:nth-child(odd){
+    background-color: gray;
+    color: black;
+}
+
+
+#wat {
+    background-color: green;
+    color: white;
+
+}
+.talenContainer {
+    display: flex;
+    flex-direction: column;
+    margin: auto;
+    justify-content: center;
+}
+.talenItem {
+    display: flex;
+    margin: auto;
+
+}
+
+
+#waar {
+    background-color: white;
+}
+#waar iframe{
+    width: 90vw;
+    height: 60vw;
+    margin: auto;
+}
+
+
+#Contact{
+    margin-bottom: 20vw;
+    color: white;
+}
+.buttonGroupCocials{
+    text-decoration: solid;
+}
+
+.buttonGroupCocials a:link {
+    color: #ff0000;
+}
+
+.buttonGroupCocials a:visited {
+    color: blue;
+}
+
+.buttonGroupCocials a:hover {
+    font-size: 150%;
+}
+
+
+footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: gray;
+    color: white;
+    text-align: center;
+}
+
+/* MOBILE */
+@media (min-width: 480px) and (max-width:767px) {
+    nav{
+        margin-bottom: 10px;
     }
 
-  /*
-  margin {
-  }
-  padding {
-  }
-  border {
-  }
-  font-family {
-  }
-  font-size {
-  }
-  */
-  
+}
+
+/* TABLET */
+@media (min-width: 768px) and (max-width:1023px) {
+    header {
+        display: block;
+    }
+    nav{
+        display: block;
+        margin-bottom: 20px;
+    }
+
+}
+
+/* SMALL LAPTOP */
+@media (min-width: 1024px) and (max-width:1199px) {
+    nav {
+            display: block;
+            margin-bottom: 20px;
+        }
+}
+
+/* WIDE MONITOR */
+@media (min-width: 1200px) {
+    nav {
+            display: block;
+            margin-bottom: 20px;
+        }
+
+        
+    #wie ul {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+        text-align: center;
+    }
+    #wat .talenContainer{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+        text-align: center;
+    }
+
+}
