--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,7 @@ button:hover{
 
 
 .hero-image {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("img/banner.png");
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/img/banner.png");
 
     /* Set a specific height */
     height: 60vw;
