--- a/css/style.css
+++ b/css/style.css
@@ -1,51 +1,39 @@
 body {
-    background-color: #3e5f8a;
-    font-family: Arial, Helvetica, sans-serif;
-    display: flex;
-    flex-direction: column;
-    text-align: center;
+    background-color:#3e5f8a;;
+    font-family:    Arial, Helvetica, sans-serif;
     margin: 0 auto;
-    height: 100%;   
+    height: 100%;
 }
-h1 {
-    margin: 5vw;
+header{
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    flex-direction: column;
+    margin-bottom: 0%;
+    margin-top: 0%;
 }
-
-a{
-    margin: 1vw;
+header img {
+    margin: auto;
+    width: 100px;
+    height: 100px;
 }
-
+header h1{
+    color:white;
+    margin: 0;
+    margin-bottom: 2%;
+}
 nav {
     display: flex;
-    flex-direction: row;
-    text-align: center;
+    flex-direction: column;
     justify-content: center;
-
+    text-align: center;
+    width: 90vw;
+    margin: 0 auto;
+    margin-bottom: 5%;
 }
-nav .button{
-    background-color: gray;
-    color: white;
-    text-decoration: none;
-    font-size: 16px;
-    padding: 2%;
-}
-
-nav a {
-    color: white;
-    text-decoration: none;
-}
-
-button{
-    transition-duration: 0.4s;
-    font: 1em sans-serif;
-}
-button:hover{
-    background-color: gray;
-}
-
 
 .hero-image {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/img/banner.png");
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/img/hero.jpg");
 
     /* Set a specific height */
     height: 60vw;
@@ -85,82 +73,212 @@ button:hover{
     background-color: #555;
     color: white;
 }
-
-#wie {
-    color: white;
-    margin: auto;
-}
-#wie ul {
+#wie{
     display: flex;
     flex-direction: column;
-}
-.cardcontainer {
-    margin: auto;
-    width: 100vw;
-    display: flex;
-    flex-direction: column;
+    justify-content: center;
     text-align: center;
-    
+    background-color: whitesmoke;
 }
-.cardcontainer img{
-    width: 90vw;
-    margin: auto;
-    background-size: cover;
-}
-.hobbycards{
+
+.container {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-rows: (1fr)[2];
+    grid-template-rows: repeat(2, 1fr);
+    -ms-grid-columns: (1fr)[4];
+    grid-template-columns: repeat(4, 1fr);
     width: 100vw;
-    
+    height: 100vh;
 }
-.hobbycards p {
+.container img {
     width: 90%;
-    margin: auto;
-    margin-bottom: 20px;
+    margin: 0 auto;
 }
 
-.hobbycards:nth-child(odd){
-    background-color: gray;
-    color: black;
+.container p {
+    margin:auto;
+    width: 80%;
 }
 
+@media screen and (max-width: 60em) {
+    .container {
+        -ms-grid-rows: (1fr)[4];
+        grid-template-rows: repeat(4, 1fr);
+    }
+}
+
+.grid-1 {
+    background-color: #3e5f8a;
+    grid-column: 1;
+    grid-column-start: 1;
+    grid-column-end: 3;
+    -ms-grid-row: 1;
+    grid-row: 1;
+}
+
+@media screen and (max-width: 60em) {
+    .grid-1 {
+        grid-column: 1;
+        grid-column-start: 1;
+        grid-column-end: 5;
+        -ms-grid-row: 1;
+        grid-row: 1;
+    }
+    .grid-1 img{
+        display: none;
+    }
+}
+
+.grid-2 {
+    -ms-grid-column: 3;
+    grid-column-start: 3;
+    grid-column-end: 5;
+    -ms-grid-row: 1;
+    grid-row: 1;
+}
+
+@media screen and (max-width: 60em) {
+    .grid-2 {
+        -ms-grid-column: 1;
+        grid-column-start: 1;
+        grid-column-end: 5;
+        -ms-grid-row: 2;
+        grid-row: 2;
+    }
+    .grid-2 img {
+        display: none;
+    }
+}
+
+.grid-3 {
+    -ms-grid-column: 1;
+    grid-column-start: 1;
+    grid-column-end: 3;
+    -ms-grid-row: 2;
+    grid-row: 2;
+}
+
+@media screen and (max-width: 60em) {
+    .grid-3 {
+        -ms-grid-column: 1;
+        grid-column-start: 1;
+        grid-column-end: 5;
+        -ms-grid-row: 3;
+        grid-row: 3;
+    }
+}
+
+.grid-4 {
+    background-color: #3e5f8a;
+    -ms-grid-column: 3;
+    grid-column-start: 3;
+    grid-column-end: 5;
+    -ms-grid-row: 2;
+    grid-row: 2;
+}
+
+@media screen and (max-width: 60em) {
+    .grid-4 {
+        -ms-grid-column: 1;
+        grid-column-start: 1;
+        grid-column-end: 5;
+        -ms-grid-row: 4;
+        grid-row: 4;
+    }
+}
+
+.callout {
+    margin: 0;
+}
 
 #wat {
-    background-color: #3e5f8a;
-    color: white;
-
+    background-color: whitesmoke;
+    display: flex;
+    text-align: center;
+    flex-direction: column;
+    margin: auto;
 }
+
 .talenContainer {
     display: flex;
     flex-direction: column;
     margin: auto;
     justify-content: center;
 }
+
 .talenItem {
     display: flex;
     margin: auto;
 
 }
 
-
 #waar {
+    display: flex;
+    margin: 0 auto;
+    text-align: center;
+    flex-direction: column;
+    padding-bottom: 10vw;
+}
+#contact {
+    display: flex;
+    margin: 0 auto;
+    text-align: center;
+    flex-direction: column;
+}
+#contact form {
+    width: 90vw;
+    margin: 0 auto;
+    margin-bottom: 1vw;
+    margin-top: 2vw;
+}
+#contact input {
+    width: 100%;
+    margin: 0 auto;
+    
+}
+#contact label{
+    text-align: center;
+    margin: 5% au;
+}
+
+#contact textarea {
+    width: 90vw;
+    margin: 0 auto;
+}
+input::before {
     background-color: white;
 }
-#waar iframe{
-    width: 90vw;
-    height: 60vw;
-    margin: auto;
-}
-input:valid{
+input:valid {
     background-color: lightgreen;
 }
-input:invalid{
+
+input:invalid {
     background-color: lightcoral;
 }
 
-#Contact{
-    margin-bottom: 20vw;
+footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 5rem;
+    background-color: gray;
     color: white;
+    text-align: center;
 }
 .buttonGroupCocials{
+    display: flexbox;
+    margin-bottom: 30vw;
+    flex-direction: column;
+}
+.buttonGroupCocials button{
+    margin: 0 auto;
+    margin-bottom: 3vw;
+    width: 90vw;
+    height: 10vw;
+}
+.buttonGroupCocials {
     text-decoration: solid;
 }
 
@@ -176,79 +294,3 @@ input:invalid{
     font-size: 150%;
 }
 
-
-footer {
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    background-color: gray;
-    color: white;
-    text-align: center;
-}
-
-/* MOBILE */
-@media (min-width: 480px) and (max-width:767px) {
-    nav{
-        margin-bottom: 10px;
-    }
-    .hero-image {
-    /* Set a specific height */
-    height: 80vw;
-    }
-
-}
-
-/* TABLET */
-@media (min-width: 768px) and (max-width:1023px) {
-    header {
-        display: block;
-    }
-    nav{
-        display: block;
-        margin-bottom: 20px;
-    }
-    .hero-image {
-    /* Set a specific height */
-    height: 40vw;
-}
-}
-
-/* SMALL LAPTOP */
-@media (min-width: 1024px) and (max-width:1199px) {
-    nav {
-            display: block;
-            margin-bottom: 20px;
-        }
-        .hero-image {
-            /* Set a specific height */
-            height: 40vw;
-        }
-}
-
-/* WIDE MONITOR */
-@media (min-width: 1200px) {
-    nav {
-            display: block;
-            margin-bottom: 20px;
-        }
-
-        
-    #wie ul {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-evenly;
-        text-align: center;
-    }
-    #wat .talenContainer{
-        display: flex;
-        flex-direction: row;
-        justify-content: space-evenly;
-        text-align: center;
-    }
-    .hero-image {
-        /* Set a specific height */
-        height: 40vw;
-        }
-
-}
