--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,7 @@ nav {
 }
 
 .hero-image {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("_img/hero.jpg");
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("img/hero.JPG");
 
     /* Set a specific height */
     height: 60vw;
